--- a/index.css
+++ b/index.css
@@ -1,11 +1,16 @@
 /*======= Create a new universal selector that changes the font color to: #3C373B */
-
+* {
+  color:#3C373B;
+}
 
 h1 {
   font-family: 'Gaegu', cursive;
   margin: 20px 0;
   /*=======  Update the font size to 60px and center the text */
-  font-size: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 60px;
 }
 
 h2, h3, h4, h5, h6 {
@@ -13,7 +18,7 @@ h2, h3, h4, h5, h6 {
   margin-bottom: 0;
   padding: 0 10px;
   /*=======  Update the font size to 30px */
-  font-size: 10px;
+  font-size: 30px;
 }
 
 /*======= Create a selector for ALL p tags in the site to have the following styles:
@@ -24,13 +29,18 @@ padding: 10px;
 line-height: 1.4;
 
 */
-
-
+p {
+  font-size: 16px;
+  font-family: roboto;
+  padding: 10px;
+  line-height: 1.4;
+}
 /*======= Create a selector for ALL images in the site to have the following styles: 
-
-  border-radius: 10px;
-
 */
+
+img {
+  border-radius: 10px;
+}
 
 .content-row {
   display: flex;
@@ -38,11 +48,13 @@ line-height: 1.4;
 
 .content-row div {
   /*======= create a margin propery.  Set the value to 20px */
+  margin: 20px;
 }
 
 .container {
   /*======= create a width property. Set the value to 605px */
   margin: 0 auto;
+  width: 605px;
 }
 
 .container header nav a {
@@ -54,17 +66,23 @@ line-height: 1.4;
   color: white;
   text-decoration: none;
   margin-bottom: 20px;
+  background: #F87B99;
    /*======= create a background property. Set the value to #F87B99 */
   
 }
 
 .container header nav a:hover {
 /*======= create a background property and set it to white.  Then create a color property and set it's value to pink. */
+background: white;
+color: pink;
 }
 
 /*======= Create a selector for the about section to have the following styles:
   margin-top: 20px;
 */
+.about-section {
+  margin-top: 20px;
+}
 
 .contact-section {
   border-top: 1px dashed black;
@@ -80,6 +98,10 @@ line-height: 1.4;
    line-height: 2;
 */
 
+address {
+  line-height: 2;
+}
+
 footer {
   width: 100%;
   background: #F87B99;
@@ -88,6 +110,7 @@ footer {
 
 footer .footer-content { 
   margin: 0 auto; 
+  width: 600px;
   /*======= create a width property. Set the value to 600px */
   
 }
@@ -106,7 +129,11 @@ footer nav {
   color: black;
   text-decoration: underline;
 */
-
+footer a {
+  margin: 10px;
+  color: black;
+  text-decoration: underline;
+}
 
 footer nav a:first-child {
   margin-left: 0;
@@ -116,7 +143,12 @@ footer nav a:first-child {
   color: white;
 */
 
+footer a:hover {
+  color: white;
+}
+
 footer .footer-content .copyright {
   padding: 20px 0;
+  text-align:center;
    /*======= center the text here */
 }
